--- a/Twitter/src/main/res/menu/menu_userlist.xml
+++ b/Twitter/src/main/res/menu/menu_userlist.xml
@@ -8,4 +8,7 @@
     <item android:id="@+id/view_feed"
         android:title="View Feed"
         app:showAsAction="always"/>
+    <item android:id="@+id/logout_button"
+        android:title="Logout"
+        app:showAsAction="always"/>
 </menu>
