fixed button title from tweet to logout

--- a/Twitter/src/main/res/menu/menu_viewfeed.xml
+++ b/Twitter/src/main/res/menu/menu_viewfeed.xml
@@ -6,6 +6,6 @@
         android:title="Tweet"
         app:showAsAction="always"/>
     <item android:id="@+id/logout_button"
-        android:title="Tweet"
+        android:title="Logout"
         app:showAsAction="always"/>
 </menu>
